[package]
name = "avif_img"
version = "0.1.2"
edition = "2021"
license = "SSPL-1.0"
homepage = "https://github.com/xxai-art/avif_img"
repository = "https://github.com/xxai-art/avif_img.git"
description = "load avif for image"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
aom-decode = "0.2.5"
image = "0.24.6"

[features]
